--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,174 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.red {
+  color: red;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.blue {
+  color: blue;
 }
 
-.App-header {
-  background-color: #282c34;
+@media (max-width: 766px) {
+}
+
+@media (max-width: 992px) {
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
   min-height: 100vh;
+  background-color: rgb(250, 248, 248);
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.main-header {
+  background-color: #1877f2;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  color: white;
+  margin: 2px;
+}
+
+.main-body-layout {
+  display: flex;
+  flex-direction: row;
+  height: 80%;
+  margin: 2px;
+}
+
+.side-nav {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  padding: 1px;
+  min-height: 80vh;
+  color: black;
+  border: 3px solid #1877f2;
+  margin: 1px;
+  background-color: white;
+}
+
+.inner-nav-container {
+  display: flex;
+  background-color: #f4f7fc;
+  flex-direction: column;
+  padding: 1px;
+  margin: 1px;
+  width: 100%;
+}
+
+.inner-nav {
+  display: flex;
+  flex-direction: row;
+  padding: 1px;
+  color: black;
+  margin: 1px;
+  background-color: white;
+  justify-content: space-around;
+  width: 100%;
+}
+.inner-nav > nav {
+  display: flex;
+  width: 100%;
+}
+.inner-nav nav > div {
+  padding: 1px;
+  margin: 1px;
+  background-color: rgb(219, 232, 252);
+  height: 50px;
+  flex-wrap: nowrap;
+  width: 100%;
+  color: #1877f2;
+}
+
+.inner-nav nav > div:hover {
+  background-color: #6eabfc;
+  text-decoration: underline;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.inner-nav nav > div a {
+  color: #1877f2;
+  position: relative;
+  top: 30%;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inner-nav nav > div a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+.main-body-content {
+  display: flex;
+  flex-direction: row;
+  flex: 70%;
+  padding: 1px;
+  min-height: 80vh;
+  margin: 1px;
+}
+
+.side-nav nav > div {
+  padding: 1px;
+  margin: 2px;
+  background-color: #1877f2;
+  color: white;
+  height: 50px;
+}
+.side-nav nav > div a {
+  color: white;
+  position: relative;
+  top: 30%;
+  text-decoration: none;
+}
+
+.side-nav nav > div:hover {
+  background-color: #6eabfc;
+  border: 1px solid white;
+  text-decoration: underline;
+  color: black;
+}
+
+.recommendation-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  min-height: 75vh;
+  margin-top: 4px;
+}
+
+.recommendation-container > div {
+  width: 100%;
+  border: 2px solid #17a2b8;
+  background-color: rgb(252, 250, 250);
+  margin: 2px;
+  padding: 10px;
+  border-radius: 1%;
+}
+
+.recommendation-container > div h3 {
+  color: #17a2b8;
+}
+.recommendation-container > div button {
+  color: #fff;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
